goTo test and Enemy test are done. Slowly fixing some bugs.